<resources>
    <string name="app_name">PlobalApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by">SORT BY</string>
    <string name="total_sales">TOTAL SALES</string>
    <string name="add_to_card">ADD TO CARD</string>
    <string name="downloads">DOWNLOADS</string>
    <string name="user_sessions">USER SESSIONS</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="view_details_label">View Details</string>
    <string name="content_description_company_image">company image</string>
    <string name="total_sales_label">Total Sales</string>
    <string name="content_description_session_icon">Session Icon</string>
    <string name="content_description_download_icon">Download Icon</string>
    <string name="content_description_add_to_card_icon">Add to card Icon</string>
    <string name="content_description_sales_icon">Sales Icon</string>
    <string name="total_card_label">Total Add to Cards</string>
    <string name="total_download_label">Total Downloads</string>
    <string name="total_session_label">Total Sessions</string>
    <string name="total_value">%1$s %2$d</string>

</resources>